# SDL2-Template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  run  run_on_msys  start.bat
src/: main.cpp
